# intersect-bio

./: Cargo.toml  LICENSE  README.md
examples/: intersect_vcf.rs  intersect_vcfs.rs
src/: chrom_dict.rs  intersect.rs  lib.rs  merge.rs  rust_htslib.rs  sequence_dict.rs
tests/: intersect_vcfs.rs  merge_vcfs.rs  setup.rs
tests/data/: intersect.vcf.gz.csi  test1.vcf.gz.csi  test2.vcf.gz.csi  test3.vcf.gz.csi
