[package]
name = "merge-bio"
version = "0.1.0"
authors = ["Malthe Sebro Rasmussen <malthe.rasmussen@bio.ku.dk>"]
edition = "2018"

[features]
default = ["rust-htslib"]

[dev-dependencies]
merge-bio = { path = ".", features = ["rust-htslib"] }
rand = "0.8"

[dependencies]
indexmap = { version = "1.6", default-features = false }
rust-htslib = { version = "0.36", optional = true }
